--- a/10. Codificação/PortalOdonto/Views/Administrador/Index.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Index.cshtml
@@ -10,47 +10,73 @@
     </div>
     <div class="row">
         <div class="col-md-3">
-            <div class="input-group">
-                <span class="input-group-addon" id="basic-addon1">Matricula</span>
-                <input type="text" class="form-control" placeholder="Buscar" aria-label="Seacher" aria-describedby="basic-addon1">
-            </div>
-            <br />
-            <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
-        </div>
-        <div class="col-md-9">
-            <p>
-                @Html.ActionLink("Cadastrar", "Create")
-            </p><br>
-            <p>
-                Usuários
-            </p>
-
-            @if (Model != null)
+            @using (Html.BeginForm("Buscar", "Administrador"))
             {
-                WebGrid tabela = new WebGrid(source: Model, rowsPerPage: 4, canPage: true,
-                            canSort: true, defaultSort: "Usuario");
-                @tabela.GetHtml(caption: "", displayHeader: true, fillEmptyRows: true,
-                            emptyRowCellValue: "___", mode: WebGridPagerModes.All, numericLinksCount: 2, tableStyle: "table",
-                            columns: tabela.Columns(
-                                tabela.Column("NomeUsuario", "Nome"),
-                                tabela.Column("MatriculaUsuario", "Matricula"),                               
-                                tabela.Column("Ações", "Ações", canSort: false,
-                                    format: (item) =>
-                                        (true) ?
-                                            new HtmlString(String.Format("{0}|{1}|{2}", new object[] {
-                                                Html.ActionLink("Editar", "Edit", new { id = item.Id }).ToString(),
-                                                Html.ActionLink("Remover", "Delete", new { id = item.Id }).ToString(),
-                                                Html.ActionLink("Detalhes", "Details", new { id = item.Id }).ToString()
-                                            }))
-                                        :null
-                                )
-                            )
-                        );
-            }else
-            {
-                <p>Nenhum Usuário Cadastrado</p>
+                <div class="input-group">
+                    <span class="input-group-addon" id="basic-addon1"> Usuário </span>
+                    <div class="col-md-3">
+                        @Html.Editor("matricula")
+                        @Html.ValidationMessage("")
+                    </div>
+                </div>
+                <div class="form-group">
+                    <div class="col-md-3"> </div>
+                    <div class="col-md-3">
+                        <input type="submit" value="Busca" class="btn btn-default" />
+                    </div>
+                    <div class="col-md-6">
+                        @Html.ActionLink("Limpar", "Index","", new { @class = "btn btn-default" })
+                    </div>
+                    <br/>
+                </div>
             }
+            <p>
+                Filtro
+                <br/>
+                </p>
+            <div class="form-group">
+                <div class="col-md-3">
+                    <span class="input-group-addon" id="basic-addon1"> Nome </span>
+                 </div>
+                <div class="col-md-3" id="filtro-nome">
+                    @Html.Editor("Nome", new { htmlAttributes = new { @id = "filtro-nome", @onchange = "filtro()" } })
+                </div>
+            </div>
+            </div>
+
+            <div class="col-md-9">
+
+                <p>
+                    @Html.ActionLink("Cadastrar", "Create", "", new { @class = "btn btn-default" })
+                </p><br>
+
+                @if (Model != null)
+                {
+                    WebGrid tabela = new WebGrid(source: Model, rowsPerPage: 4, canPage: true,
+                                canSort: true, defaultSort: "Usuario");
+                    @tabela.GetHtml(caption: "", displayHeader: true, fillEmptyRows: true,
+                     emptyRowCellValue: "___", mode: WebGridPagerModes.All, numericLinksCount: 2, tableStyle: "table",
+                     columns: tabela.Columns(
+                         tabela.Column("NomeUsuario", "Nome"),
+                         tabela.Column("MatriculaUsuario", "Matrícula"),
+                         tabela.Column("TipoUsuario","Nível do Usuário"),
+                         tabela.Column("Ações", "Ações", canSort: false,
+                             format: (item) =>
+                                     new HtmlString(String.Format("{0} {1} {2}", new object[] {
+                                                Html.ActionLink("Editar", "Edit", new { id = item.IdUsuario }, new { @class = "btn btn-default" }).ToString(),
+                                                Html.ActionLink("Remover", "Delete", new { id = item.IdUsuario }, new { @class = "btn btn-default" }).ToString(),
+                                                Html.ActionLink("Detalhes", "Details", new { id = item.IdUsuario }, new { @class = "btn btn-default" }).ToString()
+                                     }))
+                         )
+                     )
+                 );
+                }
+                else
+                {
+                    <p>Nenhum Usuário Cadastrado</p>
+                }
+            </div>
         </div>
-    </div>
+
 </div>
 
