--- a/10. Codificação/PortalOdonto/Views/Tecnico/Index.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/Index.cshtml
@@ -1,11 +1,8 @@
-﻿@model IEnumerable<Model.Models.Paciente>
-
-
-<div>
+﻿<div>
     <div>
         <h2>Tecnico</h2>
     </div>
-    <div class="row">
+    <div class="container">
         <div class="col-md-3">
             <div class="input-group">
                 <span class="input-group-addon" id="basic-addon1">Matricula</span>
@@ -15,40 +12,14 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </div>
         <div class="col-md-9">
-            <p>
-                @Html.ActionLink("Cadastrar", "Create")
-            </p><br>
-            <p>
-                Pacientes
-            </p>
-
-            @if (Model != null)
-            {
-                WebGrid tabela = new WebGrid(source: Model, rowsPerPage: 4, canPage: true,
-                            canSort: true, defaultSort: "");
-                @tabela.GetHtml(caption: "", displayHeader: true, fillEmptyRows: true,
-                            emptyRowCellValue: "___", mode: WebGridPagerModes.All, numericLinksCount: 2, tableStyle: "table",
-                            columns: tabela.Columns(
-                                tabela.Column("Nome", "Nome"),
-                                tabela.Column("Matricula", "Matricula"),
-                                tabela.Column("Tipo de Usuário", "TipoUsuario"),
-                                tabela.Column("Ações", "Ações", canSort: false,
-                                    format: (item) =>
-                                        (true) ?
-                                            new HtmlString(String.Format("{0}|{1}|{2}", new object[] {
-                                                Html.ActionLink("Editar", "Edit", new { id = item.Id }).ToString(),
-                                                Html.ActionLink("Remover", "Delete", new { id = item.Id }).ToString(),
-                                                Html.ActionLink("Detalhes", "Details", new { id = item.Id }).ToString(),
-                                            }))
-                                        : null
-                                )
-                            )
-                        );
-            }
-            else
-            {
-                <p>Nenhum Paciente Cadastrado</p>
-            }
+            <div class="bs-example">
+                <ul class="nav nav-tabs">
+                    <li role="presentation" class="active"><a href="@Url.Action("CadastrarPaciente")">Cadastrar Paciente</a></li>
+                    <li role="presentation" class="active"><a href="@Url.Action("CadastrarTriagem")">Cadastrar Triagem</a></li>
+                    <li role="presentation" ><a href="@Url.Action("ListarPacientes")">Pacientes</a></li>
+                </ul>
+            </div>
+           <br>           
         </div>
     </div>
 </div>
