Reparos dos Bugs

--- a/10. Codificação/PortalOdonto/Views/Shared/_Layout.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Shared/_Layout.cshtml
@@ -21,6 +21,12 @@
             };
         };
     </script>
+    <script>
+        $("#calendario").datepicker({
+            inline: true,
+            dateFormat: "dd/mm/yy"
+        });
+    </script>
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
