--- a/10. Codificação/PortalOdonto/Views/Administrador/Create.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Create.cshtml
@@ -69,7 +69,7 @@
                         @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-4">
                             @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
-                            @Html.ValidationMessageFor(model => model.EmailUsuario, "", new { @class = "text-danger" })
+                            @Html.ValidationMessageFor(model => model.DataNascimento, "", new { @class = "text-danger" })
                         </div>
                         <div class="col-md-6"></div>
                     </div>
