--- a/10. Codificação/PortalOdonto/Views/Administrador/Delete.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Delete.cshtml
@@ -12,12 +12,12 @@
                     <div>
                         @Html.LabelFor(model => model.NomeUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-3">
-                            @Html.EditorFor(model => model.NomeUsuario, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            @Html.DisplayFor(model => model.NomeUsuario, new { htmlAttributes = new { @class = "control-label col-md-2" } })
                         </div>
 
                         @Html.LabelFor(model => model.NomeMae, htmlAttributes: new { @class = "control-label col-md-2" })
                         <div class="col-md-3">
-                            @Html.EditorFor(model => model.NomeMae, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                            @Html.DisplayFor(model => model.NomeMae, new { htmlAttributes = new { @class = "control-label col-md-2" } })
                         </div>
                         <div class="col-md-2"> </div>
                     </div>
@@ -26,11 +26,11 @@
                 <div class="form-group">
                     @Html.LabelFor(model => model.EmailUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.EmailUsuario, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                        @Html.DisplayFor(model => model.EmailUsuario, new { htmlAttributes = new { @class = "control-label col-md-2" } })
                     </div>
                     @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-labeul col-md-2" })
                     <div class="col-md-3">
-                        @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control", @disabled = "disabled" } })
+                        @Html.DisplayFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "control-label col-md-2" } })
                     </div>
                     <div class="col-md-4"> </div>
                 </div>
