--- a/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
@@ -58,8 +58,8 @@
         <div class="form-group">
             @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-10">
-                @Html.EditorFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.DataNascimento.Date, "", new { @class = "text-danger" })
+                @Html.TextBoxFor(model => model.DataNascimento,new { @Value = Model.DataNascimento.ToString("dd/MM/yyyy"), @class = "form-control", @id = "calendario" })
+                @Html.ValidationMessageFor(model => model.DataNascimento)
             </div>
         </div>
         <div class="form-group">
