--- a/10. Codificação/PortalOdonto/Views/Administrador/Create.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Cadastrar";
 }
 
-<h2>Create</h2>
+<h2>Cadastro</h2>
 
 <div class="container">    
     <div class="row">
@@ -22,6 +22,7 @@
                 @Html.AntiForgeryToken()
                 <div class="form-horizontal">
                     <hr />
+                   
                     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
                     <div class="form-group">
                         @Html.LabelFor(model => model.NomeUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -36,7 +37,8 @@
                         </div>
                         <div class="col-md-2"></div>
                     </div>
-                   <div class="form-group">                       
+                   
+                    <div class="form-group">                       
                        @Html.LabelFor(model => model.Endereco, htmlAttributes: new { @class = "control-label col-md-2" })
                        <div class="col-md-4">
                            @Html.EditorFor(model => model.Endereco, new { htmlAttributes = new { @class = "form-control" } })
