Esqueceu senha iniciado e parcialmente implementado

--- a/10. Codificação/PortalOdonto/Views/Usuario/AlterarSenha.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Usuario/AlterarSenha.cshtml
@@ -1,45 +1,64 @@
 ﻿@model Model.Models.Account.SenhasModel
 
-@using (Html.BeginForm()) 
-{
-    @Html.AntiForgeryToken()
-    
-    <div class="form-horizontal">
-        <h4>Alterar Senha</h4>
-        <hr />
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        
+<h2>Alterar Senha</h2>
+<br/>
+<div class="row">
+    <div class="col-md-3"></div>
+    <div class="col-md-9">
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-        @Html.Label("Email", htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-4">
-            @Html.Editor("Email", new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessage("Email", "", new { @class = "text-danger" })
-        </div> 
+            <div class="form-horizontal">
+                <div class="form-group">
+                    @Html.Label("Email do Usuário", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Editor("email", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessage("email", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Matricula", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Editor("Matricula", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessage("matricula", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.Label("Nome da Mãe", htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.Editor("mae", new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessage("mae", "", new { @class = "text-danger" })
+                    </div>
+                </div>
+                <div class="form-group">
+                    @Html.LabelFor(model => model.NovaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.NovaSenha, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.NovaSenha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.NovaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.NovaSenha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NovaSenha, "", new { @class = "text-danger" })
+                <div class="form-group">
+                    @Html.LabelFor(model => model.ConfirmaNovaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
+                    <div class="col-md-10">
+                        @Html.EditorFor(model => model.ConfirmaNovaSenha, new { htmlAttributes = new { @class = "form-control" } })
+                        @Html.ValidationMessageFor(model => model.ConfirmaNovaSenha, "", new { @class = "text-danger" })
+                    </div>
+                </div>
+
+                <div class="form-group">
+                    <div class="col-md-3"></div>
+                    <div class="col-md-2">
+                        <input type="submit" value="Salvar" class="btn btn-default" />
+                    </div>
+                    <div class="col-md-2">
+                        @Html.ActionLink("Voltar", "Login", "", new { @class = "btn btn-default" })
+                    </div>
+                    <div class="col-md-3"></div>
+                </div>
+
             </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.ConfirmaNovaSenha, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.ConfirmaNovaSenha, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.ConfirmaNovaSenha, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Salvar" class="btn btn-default" />
-            </div>
-        </div>
+        }
     </div>
-}
-
-<div>
-    @Html.ActionLink("Cancelar", "Login")
 </div>
