CadastrarTriagem.cs e ListarPaciente.cs estão finalizados

--- a/10. Codificação/PortalOdonto/Views/Tecnico/ListarPacientes.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/ListarPacientes.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<Model.Models.Paciente>
+﻿@model IEnumerable<Model.Models.Triagem>
 
 @{
     ViewBag.Title = "ListarPacientes";
@@ -18,8 +18,7 @@
             <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Buscar</button>
         </div>
         <div class="bs-example">
-            <ul class="nav nav-tabs">
-                <li role="presentation" ><a href="@Url.Action("CadastrarPaciente")">Cadastrar Paciente</a></li>
+            <ul class="nav nav-tabs">               
                 <li role="presentation" ><a href="@Url.Action("CadastrarTriagem")">Cadastrar Triagem</a></li>
                 <li role="presentation" class="active"><a href="@Url.Action("ListarPacientes")">Pacientes</a></li>
             </ul>
@@ -32,15 +31,14 @@
                 @tabela.GetHtml(caption: "", displayHeader: true, fillEmptyRows: true,
                             emptyRowCellValue: "___", mode: WebGridPagerModes.All, numericLinksCount: 2, tableStyle: "table",
                             columns: tabela.Columns(
-                                tabela.Column("NomePaciente", "Nome"),
-                                tabela.Column("Contato", "Contato"),
+                                tabela.Column("Paciente.NomePaciente", "Nome"),
+                                tabela.Column("DataTriagem", "Data da Triagem"),
                                 tabela.Column("Ações", "Ações", canSort: false,
                                     format: (item) =>
                                         (true) ?
-                                            new HtmlString(String.Format("{0}|{1}|{2}", new object[] {
-                                                Html.ActionLink("Editar", "VisualizarPaciente", new { id = item.IdPaciente }).ToString(),
-                                                Html.ActionLink("Remover", "Delete", new { id = item.IdPaciente }).ToString(),
-                                                Html.ActionLink("Detalhes", "VisualizarPaciente", new { id = item.IdPaciente }).ToString(),
+                                            new HtmlString(String.Format("{0}|{1}", new object[] {
+                                                Html.ActionLink("Editar", "VisualizarPaciente", new { id = item.IdTriagem }).ToString(),                                               
+                                                Html.ActionLink("Detalhes", "VisualizarPaciente", new { id = item.IdTriagem }).ToString(),
                                             }))
                                         : null
                                 )
