--- a/10. Codificação/PortalOdonto/Views/Tecnico/Index.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/Index.cshtml
@@ -17,11 +17,11 @@
         </div>
         <div class="col-md-7">
             <div class="bs-example">
-                <ul class="nav nav-tabs">
-                    <li role="presentation" class="active"><a href="@Url.Action("CadastrarPaciente")">Cadastrar Paciente</a></li>
+                <ul class="nav nav-tabs">                    
                     <li role="presentation" class="active"><a href="@Url.Action("CadastrarTriagem")">Cadastrar Triagem</a></li>
                     <li role="presentation"><a href="@Url.Action("ListarPacientes")">Pacientes</a></li>
                 </ul>
+                josefina
             </div>
             <br>
         </div>
