--- a/10. Codificação/PortalOdonto/Views/Tecnico/CadastrarTriagem.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/CadastrarTriagem.cshtml
@@ -17,6 +17,8 @@
         <fieldset>
             <legend>Dados do Paciente</legend>
             <div class="form-group">
+                @Html.HiddenFor(model => model.Paciente.IdPaciente)
+                @Html.HiddenFor(model => model.IdTriagem)
                 @Html.LabelFor(model => model.Paciente.NomePaciente, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
                     @Html.EditorFor(model => model.Paciente.NomePaciente, new { htmlAttributes = new { @class = "form-control" } })
@@ -50,7 +52,7 @@
                     @Html.EditorFor(model => model.Paciente.ResponsavelPaciente, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Paciente.ResponsavelPaciente, "", new { @class = "text-danger" })
                 </div>
-                @Html.LabelFor(model => model.Paciente.Dt_nascimentoPaciente, htmlAttributes: new { @class = "control-label col-md-2" })
+                @Html.LabelFor(model => model.Paciente.Dt_nascimentoPaciente,htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
                     @Html.EditorFor(model => model.Paciente.Dt_nascimentoPaciente, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Paciente.Dt_nascimentoPaciente, "", new { @class = "text-danger" })
@@ -58,10 +60,10 @@
                 <div class="col-md-2"></div>
             </div>
             <div class="form-group">
-
                 @Html.LabelFor(model => model.Paciente.Sexo, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
-                    @Html.DropDownListFor(model => model.Paciente.Sexo, (SelectList)ViewBag.Sexo, new { htmlAttributes = new { @class = "form-control" } })
+                    <!--Verificar se está setando (SelectList)ViewBag.Sexo-->
+                    @Html.EditorFor(model => model.Paciente.Sexo, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Paciente.Sexo, "", new { @class = "text-danger" })
                 </div>
                 @Html.LabelFor(model => model.Paciente.Naturalidade, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -89,8 +91,8 @@
 
                 @Html.LabelFor(model => model.Paciente.EstadoCivil, htmlAttributes: new { @class = "control-label col-md-2" })
                 <div class="col-md-3">
-                    <!--Verificar se esta setanto-->
-                    @Html.DropDownListFor(model => model.Paciente.EstadoCivil, (SelectList)ViewBag.EstadoCivil,new { htmlAttributes = new { @class = "form-control" } })
+                    <!--Verificar se esta setanto (SelectList)ViewBag.EstadoCivil-->
+                    @Html.EditorFor(model => model.Paciente.EstadoCivil, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.Paciente.EstadoCivil, "", new { @class = "text-danger" })
                 </div>
                 @Html.LabelFor(model => model.Paciente.Raca, htmlAttributes: new { @class = "control-label col-md-2" })
