--- a/10. Codificação/PortalOdonto/Views/Administrador/Details.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Details.cshtml
@@ -29,8 +29,7 @@
                 </div>
                 @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-labeul col-md-2" })
                 <div class="col-md-3">
-
-                    @Html.DisplayFor(model => model.DataNascimento, new { htmlAttributes = new { @class = "control-label col-md-2" } })
+                    @Model.DataNascimento.ToString("dd/MM/yyyy")
                 </div>
                 <div class="col-md-4"> </div>
             </div>
