--- a/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
@@ -56,13 +56,12 @@
         </div>      
 
         <div class="form-group">
-            @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                
-                @Html.TextBoxFor(model => model.DataNascimento,new { @Value = Model.DataNascimento.ToString("dd/MM/yyyy"), @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.DataNascimento)
-            </div>
-        </div>
+                @Html.LabelFor(model => model.DataNascimento, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-10">
+                    @Html.EditorFor(model => model.DataNascimento, "{0:yyyy-MM-dd}", new { htmlAttributes = new { @class = "form-control", @type = "date" } })
+                    @Html.ValidationMessageFor(model => model.DataNascimento)
+                </div>
+         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Salvar" class="btn btn-default" />
