--- a/10. Codificação/PortalOdonto/Views/Home/Index.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Home/Index.cshtml
@@ -4,5 +4,13 @@
 
 <div class="jumbotron">
     <h1>Portal Odonto</h1>
-    <p class="lead">O sistema que facilita a produção e a manutenção das informações relativas aos tratamentos em pacientes da clínica com controles seguros</p>
+    <p class="lead">O sistema que facilita a produção e a manutenção das informações relativas 
+    aos tratamentos em pacientes da clínica com controles seguros</p>      
 </div>
+<div id="slide">
+    <ul>
+        <li style="list-style-type: none; margin-left: -40px; overflow: hidden"><img href="@Url.Action("Index","Home")" src=@Url.Content("~/Content/images/dente_home.png") height="300" width="1140" /></li>       
+    </ul>   
+</div>
+@Styles.Render("~/Scripts/jquery.cycle.all.js")
+@Styles.Render("~/Scripts/jquery-1.8.3.min")
