--- a/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Administrador/Edit.cshtml
@@ -73,3 +73,8 @@
 <div>
     @Html.ActionLink("Voltar", "Index", "", new { @class = "btn btn-default" })
 </div>
+
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
