--- a/10. Codificação/PortalOdonto/Views/Tecnico/CadastrarTriagem.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/CadastrarTriagem.cshtml
@@ -401,3 +401,7 @@
 <div>
     @Html.ActionLink("Back to List", "Index")
 </div>
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
