--- a/10. Codificação/PortalOdonto/Views/Tecnico/EditarPerfil.cshtml
+++ b/10. Codificação/PortalOdonto/Views/Tecnico/EditarPerfil.cshtml
@@ -15,16 +15,18 @@
         <hr />
         @Html.ValidationSummary(true, "", new { @class = "text-danger" })       
         @Html.HiddenFor(model => model.IdUsuario)
+        @Html.HiddenFor(model => model.TipoUsuario)
+        @Html.HiddenFor(model => model.MatriculaUsuario)
         <div class="form-group">
             @Html.LabelFor(model => model.NomeUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.NomeUsuario, new { htmlAttributes = new { @class = "form-control" } })
                 @Html.ValidationMessageFor(model => model.NomeUsuario, "", new { @class = "text-danger" })
             </div>
-            @Html.LabelFor(model => model.MatriculaUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
+            @Html.LabelFor(model => model.NomeMae, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
-                @Html.EditorFor(model => model.MatriculaUsuario, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.MatriculaUsuario, "", new { @class = "text-danger" })
+                @Html.EditorFor(model => model.NomeMae, new { htmlAttributes = new { @class = "form-control" } })
+                @Html.ValidationMessageFor(model => model.NomeMae, "", new { @class = "text-danger" })
             </div>
             <div class="col-md-2"></div>
         </div>       
@@ -56,11 +58,7 @@
             <div class="col-md-2"></div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.NomeMae, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.NomeMae, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.NomeMae, "", new { @class = "text-danger" })
-            </div>
+            
             @Html.LabelFor(model => model.EmailUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
             <div class="col-md-4">
                 @Html.EditorFor(model => model.EmailUsuario, new { htmlAttributes = new { @class = "form-control" } })
@@ -68,8 +66,6 @@
             </div>
             <div class="col-md-2"></div>
         </div>
-
-        
 
         <div class="form-group">
             @Html.LabelFor(model => model.SenhaUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
@@ -85,13 +81,6 @@
             <div class="col-md-2"></div>
         </div>
         <div class="form-group">
-            @Html.LabelFor(model => model.TipoUsuario, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-4">
-                @Html.EditorFor(model => model.TipoUsuario, new { htmlAttributes = new { @class = "form-control", @disabled= "disabled"}})
-                @Html.ValidationMessageFor(model => model.TipoUsuario, "", new { @class = "text-danger" })
-            </div>
-        </div>
-        <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Salvar" class="btn btn-default" />
             </div>
@@ -102,3 +91,8 @@
 <div>
     @Html.ActionLink("Voltar", "Index")
 </div>
+
+
+@section Scripts {
+    @Scripts.Render("~/bundles/jqueryval")
+}
